--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "uid": "^2.0.2",
     "uuid": "^9.0.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
